<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Layout -->
    <string name="remove_ads">Remove Ads &amp; More</string>
    <string name="current_coordinates">Current location:</string>
    <string name="waiting_for_gps">Waiting for GPS …</string>
    <string name="share_by_email">Share by Email</string>
    <string name="export">Export to File</string>
    <string name="you_dont_have_gps_enabled">You don\'t have GPS enabled</string>
    <string name="gps_not_available">GPS not available</string>
    <string name="altitude">Altitude: </string>
    <string name="feet"> ft</string>
    <string name="stop_averaging">Stop Averaging</string>
    <string name="start_averaging">Start Averaging</string>
    <string name="new_averaging">New Averaging</string>
    <string name="ok">OK</string>
    <string name="average_location_exported_to_files" formatted="true">Average location exported to directory "%1$s" and files:\nGPX: %2$s\nKML: %3$s</string>
    <string name="application_cant_write_file" formatted="true">Application can\'t write the file, because: %1$s</string>
    <string name="cant_create_storage_directory" formatted="true">Application can\'t create directory %1$s.</string>
    <string name="measurements" formatted="true">%1$s measurements</string>
    <string name="satellites_info" formatted="true">%1$s satellites visible</string>
    <string name="start_averaging_first">Start averaging first</string>
    <string name="averaging_running">GPS Averaging in progress</string>
    <string name="tap_to_control_it">Tap to control it</string>
    <string name="show_on_map">Show on Map</string>

    <!-- Email -->
    <string name="email_subject">Your averaged location</string>
    <string name="average_coordinates">Averaged location:</string>
    <string name="google_maps_link">Google Maps link:</string>
    <string name="average_altitude">Averaged altitude:</string>
    <string name="email_footer">These coordinates were measured by Android app "GPS Averaging" created by Destil</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="coordinate_format">Format of coordinates</string>
    <string name="units">Units</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial (US)</string>
    
    <!-- About -->
    <string name="about">About</string>
    <string name="rate_label">Like GPS Averaging?</string>
    <string name="rate_action">Rate on Google Play</string>
    <string name="mail_label">Problems?</string>
    <string name="mail_action">Send Feedback Email</string>
    <string name="web_label">Interested about open-source, API?</string>
    <string name="web_action">Visit GitHub</string>
    <string name="created_by">Created by </string>
    <string name="thank_you">Thank you for supporting this app!</string>
    <string name="version">Version</string>
    <string name="problem_report">GPS Averaging Problem Report</string>
    <string name="problem_report_body">What phone do you have?\n%1$s\n\nDescribe your problem in detail:\n\n</string>
    <string name="share">Share</string>
    <string name="export_to_gpx">Export to GPX file</string>
    <string name="export_to_kml">Export to KML file</string>
    <string name="no_app_to_handle">No app to handle this file.</string>
    <string name="location_permission_rationale">This app needs Location permission for averaging location.</string>

</resources>