<!--
  ~ Copyright 2015 David Vávra
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_remove_ads"
        app:showAsAction="never"
        android:title="@string/remove_ads"/>
    <item
        android:id="@+id/menu_settings"
        app:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_about"
        app:showAsAction="never"
        android:title="@string/about"/>

</menu>